version 3.1.4
  - fix episode progress playback sync
  - improved movie progress playback sync
  - fix another case of the rating popup failing to show up
  - some more fixes

version 3.1.3
  - bugfix for movies being rated with 1 on sync
  - added fallback for dates outside of the unix timespan - they will now fall back to the current date/time
  - fixed rating popup not showing up for content from external addons

version 3.1.2
  - bugfix for movie playback progress sync

version 3.1.1
  - bugfix for tv show rating sync

version 3.1.0
  - add ratings sync for movies, tvshows and episodes
  - store ratings in kodi when rating on trakt

version 3.0.7
  - fix for exclusions when using special characters

version 3.0.6
  - fix getting some user settings, like path excludes

version 3.0.5
  - added scrobble start offset setting (default is 0)
  - changed up/down buttons in rating dialog to go to 10/1 instead of right/left
  - you can now exclude up to 12 paths
  - fixed multiple potential crashs
  - updated language files from Transifex

version 3.0.4
  - added playback progress sync for episodes
  - fixed problem when external addon is providing video_ids but no year
  - fixed problem with multi-part episodes sometimes not being recognized
  - added fallback for dates outside of the unix timespan - they will now fall back to the current date/time
  - updated language files from Transifex

version 3.0.3
  - bugfix for keyboard not showing up when trying to type in the pin dialog
  - properly handle any ids combination when scrobbling is off for ratings
  - updated language files from Transifex

version 3.0.2
  - fancy PIN auth dialog (by tknorris) and design (by piers)
  - new design for context menu (by piers)
  - skinners be aware, we renamed the dialogs, so you will need to rename yours too
  - improved the dialogs so they are easier to skin
  - you no longer need to scrobble to get a rating dialog