@@ -5,6 +5,7 @@
         <import addon="script.module.simplejson" version="3.3.0"/>
         <import addon="script.module.trakt" version="2.5.2"/>
         <import addon="script.module.dateutil" version="2.4.2"/>
+        <import addon="script.module.addon.signals" version="0.0.1"/>
 	</requires>
 	<extension point="xbmc.python.script" library="script.py">
 		<provides>executable</provides>
