@@ -2,7 +2,9 @@ version 3.1.4
   - fix episode progress playback sync
   - improved movie progress playback sync
   - fix another case of the rating popup failing to show up
+  - improved interaction with Nextup Service Notification addon
   - some more fixes
+  - more tests
 
 version 3.1.3
   - bugfix for movies being rated with 1 on sync
